# anything-llm

./: #sudo su README.md  .cloudbuild.yaml  .dockerignore  .editorconfig  .env  .env.example  .gitignore  .gitmodules  .hadolint.yaml  .pnp.cjs  .pnp.loader.mjs  .prettierignore  .prettierrc  .railwayignore  .stylelintrc.json  AGENTS.md  BARE_METAL.md  BROWSER-TEST-DATEPICKER.md  BUILD.md  CHANGELOG.md  CHANGES_BY_JONATHANXOXOX.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENT_PROCESSING_FLOW.md  Dockerfile  GOOGLE_DRIVE_SETUP.md  LICENSE  MIGRATION_NOTES.md  Makefile  PROJECT_COMPLETE.md  PR_DESCRIPTION.md  Python.gitignore:Zone.Identifier  README.ja-JP.md  README.md  README.zh-CN.md  README.zh.md  RELEASE_NOTES_v1.md  SECURITY.md  STYLEGUIDE.md  TERMS_SELF_HOSTED.md  (+44 more)
collector/: .env.example  .gitignore  .pylintrc  AZURE_DEVOPS_ORGANIZATION_LOADING.md  README.md  api.py  build.mjs  comprehensive-test.js  dev.js  eslint.config.mjs  index.js  main.py  nodemon.json  package-lock.json  package.json  processing_api.py  pyproject.toml  requirements.txt  simple-test.js  test-azure-devops-org.js  test-azure-devops.js  watch.py  wsgi.py
collector/convertAudioToWav/: index.js
collector/extensions/: index.js
collector/hotdir/: __HOTDIR__.md
collector/middleware/: httpLogger.js  setDataSigner.js  verifyIntegrity.js
collector/patches/: epub2+3.0.2.patch
collector/processLink/: index.js
collector/processRawText/: index.js
collector/processSingleFile/: index.js  testProcessFile.js
collector/routes/: googledocs.js
collector/scripts/: gitbook.py  link.py  link_utils.py  utils.py  (+8 more)
(+4756 files in other folders)
