# python project setup for version 3.11, PEP 664
# https://www.python.org/dev/peps/pep-0664/

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[project]
name = "anything-llm"
description = "The best solution for turning private documents into a chat bot using off-the-shelf tools and commercially viable AI technologies."
license = "MIT"
authors = [{ name = "Timothy Carambat (Mintplex Labs)" }]
version = "0.2.0"
requires-python = ">=3.11"
keywords = ["chatbot", "ai", "nlp", "rag"]
# dependencies = ["requests"]

[project.optional-dependencies]
dev = ["debugpy", "pylint", "black"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
(
    hotdir
)
'''
